--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Hire</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width height=device-height, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- <link rel="stylesheet" type="text/css" href="styles/loader.css"> -->
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2pCpXrCKOgMJNl_qyHapgyfVRN2Rc6_Y"/>
 
   </script>
 </head>
