--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2pCpXrCKOgMJNl_qyHapgyfVRN2Rc6_Y"/>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC2pCpXrCKOgMJNl_qyHapgyfVRN2Rc6_Y" async defer/>
 
   </script>
 </head>
